# deepinspection-python

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: build_and_publish.yml
deepinspection/track/: client.py
examples/optram/: README.md  pyproject.toml  pytest.ini
examples/optram/deepinspection_optram/: convert.py  map_url.py  mappings.py  sweref99_coordinates.py
examples/optram/tests/: client.py  test_download_export.py
tests/: client.py  test_download_export.py  test_get_export.py  test_list_exports.py
