[tool.poetry]
name = "deepinspection-optram"
version = "0.1.0"
description = ""
authors = ["NextML"]
readme = "README.md"
packages = [
    { include = "deepinspection_optram" }
]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
typer = "^0.9.0"
sweref99 = "^0.2"
numpy = "^1.26.4"
pandas = "^2.2.0"
tqdm = "^4.66.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
ipykernel = "^6.29.2"
ipywidgets = "^8.1.2"
pydantic-settings = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
